fix text going off screen with larger numbers

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ body{
 #calculatorScreen{
     display: flex;
     flex-direction: column;
+    word-wrap: break-word;
+    word-break: break-all;
     justify-content: space-between;
     align-items: flex-end;
     background-color: gainsboro;
